# youtube-migrator

./: .env.example  .gitignore  Dockerfile  README.md  run.py
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  channels.py  logs.py  migrations.py  settings.py
backend/app/config/: config.py
backend/app/database/: db.py
backend/app/models/: models.py
backend/app/repositories/: settings_repository.py  task_repository.py  token_repository.py
backend/app/schemas/: schemas.py
backend/app/services/: auth_service.py  downloader_service.py  queue_service.py  youtube_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Progress.tsx  Select.tsx  Table.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/: LogsPage.tsx  MigrationPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
