[project]
name = "youtube-migrator-backend"
version = "0.1.0"
description = "Backend for YouTube Migrator application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlmodel>=0.0.16",
    "google-api-python-client>=2.122.0",
    "google-auth>=2.28.2",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "yt-dlp>=2024.3.10",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = []
